<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:layout_centerInParent="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="25dp"
        android:background="#0D47A1">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/AJR"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ajr_logo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="40dp"
        app:boxCornerRadiusBottomStart="40dp"
        app:boxCornerRadiusTopEnd="40dp"
        app:boxCornerRadiusTopStart="40dp"
        android:layout_below="@id/tv_name"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#0D47A1"
        app:backgroundTint='#0D47A1'
        android:textColorHint="#0D47A1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Email"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="40dp"
        app:boxCornerRadiusBottomStart="40dp"
        app:boxCornerRadiusTopEnd="40dp"
        app:boxCornerRadiusTopStart="40dp"
        android:layout_below="@id/email_text_layout"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#0D47A1"
        app:backgroundTint='#0D47A1'
        android:textColorHint="#0D47A1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Password"
            android:inputType="textPassword" >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_text_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
            android:text="@string/clr"
            android:textColor="#eba434" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="4"
            android:backgroundTint="#0D47A1"
            android:elevation="50dp"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPanel"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="14dp"
        android:textColor="@color/black"/>

  </RelativeLayout>