<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".DriverActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="25dp"
        android:background="#0D47A1">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/AJR"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:hint="User"
        android:text="Selamat Datang"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDriver"
        android:layout_below="@id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="16dp"
        app:strokeColor="#0D47A1"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/peopleicon"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvnamaDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/icon"
                    android:hint="User"
                    android:text="Driver Name"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@id/txtUser"
                    android:backgroundTint="#0D47A1"
                    android:elevation="50dp"
                    android:text="@string/profile"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardStatusAktifDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardDriver"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="16dp"
        app:strokeColor="#0D47A1"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayoutDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:hint="User"
                        android:text="Status Driver"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_statusAktifDriver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Aktif - Menerima Pesanan"
                        android:textColor="@color/white"
                        app:chipBackgroundColor="@color/selesai" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/linearLayoutDriver"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <Button
                        android:id="@+id/btn_ubahStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="27dp"
                        android:layout_toEndOf="@id/txtUser"
                        android:backgroundTint="#0D47A1"
                        android:elevation="50dp"
                        android:text="@string/ubah"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardStatusAktifDriver"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="16dp"
        app:strokeColor="#0D47A1"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="Tampil Riwayat"
                android:text="Tampil Riwayat"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_tampilRiwayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="27dp"
                android:layout_toEndOf="@id/txtUser"
                android:backgroundTint="#0D47A1"
                android:elevation="50dp"
                android:text="Tampil"
                android:textColor="#FFFFFF" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="bottom">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#0D47A1"
            android:elevation="50dp"
            android:text="@string/logout"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>