<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f3f3f3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="25dp"
        android:background="#0D47A1">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/AJR"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:hint="User"
        android:text="Selamat Datang"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_below="@id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="16dp"
        app:strokeColor="#0D47A1"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/peopleicon"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/icon"
                    android:hint="User"
                    android:text="User"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@id/txtUser"
                    android:backgroundTint="#0D47A1"
                    android:elevation="50dp"
                    android:text="@string/profile"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txtMenuUtama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:hint="User"
        android:text="Menu Utama"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/txtMenuUtama">

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:columnCount="3"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardgrid1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="20dp"
                app:strokeColor="#0D47A1"
                app:strokeWidth="2dp"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imagegrid1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/car"
                        android:layout_centerInParent="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imagegrid1"
                        android:layout_centerInParent="true"
                        android:text="Daftar Mobil"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardgrid2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="20dp"
                app:strokeColor="#0D47A1"
                app:strokeWidth="2dp"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imagegrid2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/promo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imagegrid2"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:text="Promo Anda"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardgrid3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="20dp"
                app:strokeColor="#0D47A1"
                app:strokeWidth="2dp"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imagegrid3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/history"
                        android:layout_centerInParent="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imagegrid3"
                        android:layout_centerInParent="true"
                        android:text="Riwayat"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_below="@id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="bottom">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#0D47A1"
            android:elevation="50dp"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


</RelativeLayout>